# multivector_visualizer

./: .gitignore  .progress.md  CLAUDE.md  Cargo.toml  README.md  design.md  requirements.md  tasks.md
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs  metrics.rs  python_engine.rs  runner.rs  sift.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  compare.rs  demo.rs  gtbench.rs  largebench.rs  main.rs  msmarco.rs  repl.rs  scalebench.rs  tradeoffbench.rs
crates/colbert/: Cargo.toml
crates/colbert/src/: encoder.rs  engine.rs  index.rs  jina.rs  lib.rs  maxsim.rs  verify.rs
crates/colbert/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: bench_types.rs  corpus.rs  engine.rs  lib.rs  scenario.rs  token.rs  trace.rs  visualize.rs  viz.rs
crates/hnsw/: Cargo.toml
crates/hnsw/src/: atlas.rs  engine.rs  lib.rs  local.rs  verify.rs  voyage.rs
crates/hnsw/tests/: integration.rs
crates/plaid/: Cargo.toml
crates/plaid/src/: centroid.rs  engine.rs  index.rs  lib.rs  verify.rs
crates/plaid/tests/: integration.rs
crates/tachiom/: Cargo.toml
crates/tachiom/src/: engine.rs  lib.rs  pq.rs  verify.rs
crates/tachiom/src/tac/: budget.rs  clustering.rs  damping.rs  mod.rs  tail.rs
crates/tachiom/tests/: integration.rs
crates/warp/: Cargo.toml
crates/warp/src/: engine.rs  gather.rs  lib.rs  verify.rs  xtr.rs
crates/warp/tests/: integration.rs
plots/: index.html
scenarios/: colbert.toml  compare.toml  hnsw.toml  plaid.toml  tachiom.toml  warp.toml
scripts/: embed_gte.py  plot.py
