[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
common    = { path = "../common" }
tokio     = { workspace = true }
anyhow    = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
which     = { workspace = true }
