[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "multivector"
path = "src/main.rs"

[dependencies]
common   = { path = "../common" }
hnsw     = { path = "../hnsw" }
colbert  = { path = "../colbert" }
plaid    = { path = "../plaid" }
warp     = { path = "../warp" }
tachiom  = { path = "../tachiom" }
bench    = { path = "../bench" }
tokio    = { workspace = true }
anyhow   = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
clap     = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy  = { workspace = true }
rand     = { workspace = true }
plotters = { workspace = true }
