[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
tokenizers  = { workspace = true }
rand        = { workspace = true }
hnsw_rs     = { workspace = true }
half        = { workspace = true }
rayon       = { workspace = true }
