[package]
name = "hnsw"
version = "0.1.0"
edition = "2021"

[dependencies]
common   = { path = "../common" }
tokio    = { workspace = true }
anyhow   = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
tracing  = { workspace = true }
mongodb  = { workspace = true }
reqwest  = { workspace = true }
hnsw_rs  = { workspace = true }
dotenvy  = { workspace = true }
which    = { workspace = true }
